[aliases]
test=pytest

[tool:pytest]
addopts = --verbose --tc-file=config.ini --ignore-glob=samples/*
python_files = test_*.py

[tool:pytest:cover]
addopts = --verbose --tc-file=config.ini --ignore-glob=samples/* --workers=3
python_files = test_*.py

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE.txt